--- a/public/room.html
+++ b/public/room.html
@@ -15,9 +15,7 @@
     
     <div class="players">
         <h2>Players:</h2><br>
-        <ul>
-            <li></li>
-            <li></li>
+        <ul class="player_list">
         </ul>
     </div>
 
