implemented rooms, users

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
             <label for="room">pick room:</label><br>
             <select id="room" name="room" required><br>
                 <option value="xd">xd</option>
+                <option value="dx">dx</option>
             </select><br>
             
             <label for="role">Enter the room as:</label><br>
