--- a/public/room.html
+++ b/public/room.html
@@ -12,12 +12,6 @@
     <div class="title">
         <h1>Room no. x</h1><br>
     </div>
-    
-    <div class="players">
-        <h2>Players:</h2><br>
-        <ul class="player_list">
-        </ul>
-    </div>
 
     <div class="gamefield">
         <table>
@@ -39,6 +33,18 @@
         </table>
     </div>
 
+    <div class="players">
+        <h2>Players:</h2><br>
+        <ul class="player_list">
+        </ul>
+    </div>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.11.0/qs.min.js" 
+        integrity="sha512-/l6vieC+YxaZywUhmqs++8uF9DeMvJE61ua5g+UK0TuHZ4TkTgB1Gm1n0NiA86uEOM9JJ6JUwyR0hboKO0fCng==" 
+        crossorigin="anonymous" 
+        referrerpolicy="no-referrer">
+    </script>
     <script src="socket.io/socket.io.js"></script>
     <script src="js/main.js"></script>
 </body>
