add dynamic room member list, display room name etc.

--- a/public/room.html
+++ b/public/room.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <div class="title">
-        <h1>Room no. x</h1><br>
+    <div id="title" class="title">
+        
     </div>
 
     <div class="gamefield">
@@ -35,7 +35,7 @@
 
     <div class="players">
         <h2>Players:</h2><br>
-        <ul class="player_list">
+        <ul id="playerList" class="playerList">
         </ul>
     </div>
 
