add spectator list, modify README

--- a/public/room.html
+++ b/public/room.html
@@ -34,8 +34,14 @@
     </div>
 
     <div class="players">
-        <h2>Players:</h2><br>
+        <h2>Players:</h2>
         <ul id="playerList" class="playerList">
+        </ul>
+    </div>
+
+    <div class="spectators">
+        <h2>Spectators:</h2>
+        <ul id="spectatorList" class="spectatorList">
         </ul>
     </div>
 
