--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <div class="form">
         <form action="room.html">
             <label for="username">Username:</label><br>
-            <input type="text" id="username" name="username" required><br>
+            <input type="text" id="username" name="username" required autocomplete="off"><br>
             
             <label for="room">pick room:</label><br>
             <select id="room" name="room" required><br>
