implement most of game logic, check if there max 2 players in the room while joining

--- a/public/room.html
+++ b/public/room.html
@@ -16,19 +16,19 @@
     <div class="gamefield">
         <table>
             <tr>
-            <td id="NW" onclick="change(id)"></td>
-            <td id="N"  onclick="change(id)" class="vertical"></td>
-            <td id="NE" onclick="change(id)"></td>
+            <td id="NW" onclick="move(id)"></td>
+            <td id="N"  onclick="move(id)" class="vertical"></td>
+            <td id="NE" onclick="move(id)"></td>
             </tr>
             <tr>
-            <td id="W" onclick="change(id)" class="horizontal"></td>
-            <td id="C" onclick="change(id)" class="vertical horizontal"></td>
-            <td id="E" onclick="change(id)" class="horizontal"></td>
+            <td id="W" onclick="move(id)" class="horizontal"></td>
+            <td id="C" onclick="move(id)" class="vertical horizontal"></td>
+            <td id="E" onclick="move(id)" class="horizontal"></td>
             </tr>
             <tr>
-            <td id="SW" onclick="change(id)"></td>
-            <td id="S"  onclick="change(id)" class="vertical"></td>
-            <td id="SE" onclick="change(id)"></td>
+            <td id="SW" onclick="move(id)"></td>
+            <td id="S"  onclick="move(id)" class="vertical"></td>
+            <td id="SE" onclick="move(id)"></td>
             </tr>
         </table>
     </div>
