proper check if there are 2 players max in a room works, players get assigned symbol to play, can make moves, new users get current board state immediately

--- a/public/room.html
+++ b/public/room.html
@@ -13,10 +13,10 @@
         
     </div>
 
-    <div class="gamefield">
+    <div id="gamefield" class="gamefield">
         <table>
             <tr>
-            <td id="NW" onclick="move(id)"></td>
+            <td id="NW" onclick="move(id)">X</td>
             <td id="N"  onclick="move(id)" class="vertical"></td>
             <td id="NE" onclick="move(id)"></td>
             </tr>
