--- a/public/room.html
+++ b/public/room.html
@@ -16,7 +16,7 @@
     <div id="gamefield" class="gamefield">
         <table>
             <tr>
-            <td id="NW" onclick="move(id)">X</td>
+            <td id="NW" onclick="move(id)"></td>
             <td id="N"  onclick="move(id)" class="vertical"></td>
             <td id="NE" onclick="move(id)"></td>
             </tr>
