updated html, rearrange divs, add new information in html, add appropriate js to it, updated css,  added favicon

--- a/public/index.html
+++ b/public/index.html
@@ -4,32 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal gier</title>
+    <title>Game portal</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 </head>
 
 <body>
-    <div class="title">
-        <h1>Portal gier</h1>
+    <div class="roomName">
+        <h1>Game portal</h1>
     </div>
-    <div class="form">
-        <form action="room.html">
+    <div class="formDiv">
+        <form class="form" action="room.html">
             <label for="username">Username:</label><br>
-            <input type="text" id="username" name="username" required autocomplete="off"><br>
+            <input type="text" id="username" name="username" required autocomplete="off" style="width:200px"><br>
             
             <label for="room">pick room:</label><br>
-            <select id="room" name="room" required><br>
+            <select id="room" name="room" required size="8" style="width:200px"><br>
                 <option value="xd">xd</option>
                 <option value="dx">dx</option>
+                <option value="dy">dy</option>
             </select><br>
             
             <label for="role">Enter the room as:</label><br>
-            <select id="role" name="role" required><br>
+            <select id="role" name="role" required style="width:200px"><br>
                 <option value="player">player</option>
                 <option value="spectator">spectator</option>
-            </select><br>
+            </select><br><br>
 
-            <input type="submit" value="Enter">
+            <input type="submit" value="Enter" style="width:120px; height:30px">
         </form>
     </div>
 </body>
