--- a/public/room.html
+++ b/public/room.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Room</title>
+    <title id="title">Room</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 </head>
 
 <body>
-    <div id="title" class="title">
+    <div id="roomName" class="roomName">
         
     </div>
 
@@ -33,16 +34,40 @@
         </table>
     </div>
 
-    <div class="players">
-        <h2>Players:</h2>
-        <ul id="playerList" class="playerList">
-        </ul>
+    <div class="information">
+        <div id="usernameInfo">
+
+        </div>
+
+        <div id="turnInfo">
+            <p id="turn">It is x's move</p>
+        </div>
+
+        <div id="roleInformation">
+            
+        </div>
     </div>
 
-    <div class="spectators">
-        <h2>Spectators:</h2>
-        <ul id="spectatorList" class="spectatorList">
-        </ul>
+    <div class="float-container">
+        <div class="float-child">
+            <div class="players">
+                <h2>Players:</h2>
+                <ul id="playerList" class="playerList">
+                </ul>
+            </div>
+            <div class="spectators">
+                <h2>Spectators:</h2>
+                <ul id="spectatorList" class="spectatorList">
+                </ul>
+            </div>
+        </div>
+
+        <div class="float-child">
+            <div class="logs">
+                <h2>Logs:</h2>
+                <ul id="logList"></ul>
+            </div>
+        </div>
     </div>
 
 
