make logs display on the page, put them into scrollable div

--- a/public/room.html
+++ b/public/room.html
@@ -36,15 +36,13 @@
 
     <div class="information">
         <div id="usernameInfo">
-
         </div>
 
         <div id="turnInfo">
             <p id="turn">It is x's move</p>
         </div>
 
-        <div id="roleInformation">
-            
+        <div id="roleInfo">
         </div>
     </div>
 
