bugfix: make room name still required in form

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
             <input type="text" id="username" name="username" required autocomplete="off" style="width:200px"><br>
             
             <label for="room">pick room:</label><br>
-            <select id="room" name="room" size="8" style="width:200px"><br>
+            <select id="room" name="room" size="8" required style="width:200px"><br>
                 <option value="xd">xd</option>
                 <option value="dx">dx</option>
                 <option value="dy">dy</option>
