reset board after new player enters a room, add TURN variable

--- a/public/room.html
+++ b/public/room.html
@@ -39,7 +39,7 @@
         </div>
 
         <div id="turnInfo">
-            <p id="turn">It is x's move</p>
+            <p id="turn">It is X's move</p>
         </div>
 
         <div id="roleInfo">
