finishing minor bugfixes, winner is now also displayed under the board, new log messages

--- a/public/room.html
+++ b/public/room.html
@@ -39,7 +39,7 @@
         </div>
 
         <div id="turnInfo">
-            <p id="turn">It is X's move</p>
+            <p id="turn">It is X's turn</p>
         </div>
 
         <div id="roleInfo">
